# TestCMake

./: .gitignore  Cmd.txt  README.md
phase1/: CMakeLists.txt  Makefile1  Makefile2  board.cpp  board.h  computer.cpp  computer.h  human.cpp  human.h  main.cpp  player.cpp  player.h  view.cpp  view.h
phase2/: CMakeLists.txt  board.cpp  board.h  computer.cpp  computer.h  human.cpp  human.h  main.cpp  player.h
phase2/ialib/: CMakeLists.txt
phase2/ialib/include/: ia.h
phase2/ialib/src/: ia.c
